--- a/css/style.scss
+++ b/css/style.scss
@@ -597,6 +597,10 @@ nav .navbar-container ul li:hover .enumCountrys {
     .img-container {
         margin: 0;
     }
+
+    .about-text {
+        padding: 0;
+    }
 }
 
 /* -----------------------------popup----------------------------
@@ -713,6 +717,10 @@ nav .navbar-container ul li:hover .enumCountrys {
 
     .img-container .btn {
         font-size: 0.7rem;
+    }
+
+    .about-text {
+        padding: 0;
     }
 }
 
